p2/app3/app3_service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: app-three
  spec:
    ports:
    - name: tcp
      port: 80
      targetPort: 8080
    selector:
      app: app-three
