p2/app3/app3_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-three-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: app3.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-three-service
            port: 
              number: 80
